Adicionado carta Renegada Gertie

--- a/public/index.html
+++ b/public/index.html
@@ -1381,6 +1381,7 @@
               <option value="4595">Carta Cenere</option>
               <option value="4593">Carta Menblatt</option>
               <option value="4594">Carta Petal</option>
+              <option value="4682">Carta Renegada Gertie</option>
               <option value="4588">Carta Wakwak</option>
             </select>
           </td>
