Adicionado encantamentos nos mantos temporais e armaduras do heroi

--- a/public/index.html
+++ b/public/index.html
@@ -825,6 +825,100 @@
             </select>
           </td>
         </tr>
+        <tr class="alwaysShow encantamentos encantamentosAtemporal">
+          <td colspan="6" align="center">
+            <select autocomplete="off" id="atemporal-e1" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="atemporal-e1-atq3">ATQ +3</option>
+              <option value="atemporal-e1-atq4">ATQ +4</option>
+              <option value="atemporal-e1-atq5">ATQ +5</option>
+              <option value="atemporal-e1-atq6">ATQ +6</option>
+              <option value="atemporal-e1-atq7">ATQ +7</option>
+              <option value="atemporal-e1-atq8">ATQ +8</option>
+              <option value="atemporal-e1-atq9">ATQ +9</option>
+              <option value="atemporal-e1-atq10">ATQ +10</option>
+              <option value="atemporal-e1-atq11">ATQ +11</option>
+              <option value="atemporal-e1-atq12">ATQ +12</option>
+              <option value="atemporal-e1-atq13">ATQ +13</option>
+              <option value="atemporal-e1-atq14">ATQ +14</option>
+              <option value="atemporal-e1-atq15">ATQ +15</option>
+              <option value="atemporal-e1-atq16">ATQ +16</option>
+              <option value="atemporal-e1-atq17">ATQ +17</option>
+              <option value="atemporal-e1-atq18">ATQ +18</option>
+              <option value="atemporal-e1-atq19">ATQ +19</option>
+              <option value="atemporal-e1-atq20">ATQ +20</option>
+              <option value="atemporal-e1-arm1">ATQ da arma +1%</option>
+              <option value="atemporal-e1-arm2">ATQ da arma +2%</option>
+              <option value="atemporal-e1-arm3">ATQ da arma +3%</option>
+              <option value="atemporal-e1-cri1">CRIT +1</option>
+              <option value="atemporal-e1-cri2">CRIT +2</option>
+              <option value="atemporal-e1-cri3">CRIT +3</option>
+              <option value="atemporal-e1-cri4">CRIT +4</option>
+              <option value="atemporal-e1-cri5">CRIT +5</option>
+              <option value="atemporal-e1-asp1">ASPD +1%</option>
+              <option value="atemporal-e1-asp2">ASPD +2%</option>
+              <option value="atemporal-e1-asp3">ASPD +3%</option>
+              <option value="atemporal-e1-asp4">ASPD +4%</option>
+              <option value="atemporal-e1-asp5">ASPD +5%</option>
+              <option value="atemporal-e1-dcr1">Dano crítico +1%</option>
+              <option value="atemporal-e1-dcr2">Dano crítico +2%</option>
+              <option value="atemporal-e1-dcr3">Dano crítico +3%</option>
+              <option value="atemporal-e1-dcr4">Dano crítico +4%</option>
+              <option value="atemporal-e1-dcr5">Dano crítico +5%</option>
+              <option value="atemporal-e1-dis1">Dano a distância +1%</option>
+              <option value="atemporal-e1-dis2">Dano a distância +2%</option>
+              <option value="atemporal-e1-dis3">Dano a distância +3%</option>
+              <option value="atemporal-e1-dis4">Dano a distância +4%</option>
+              <option value="atemporal-e1-dis5">Dano a distância +5%</option>
+            </select>
+          </td>
+          <td colspan="6" align="center">
+            <select autocomplete="off" id="atemporal-e2" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="atemporal-e2-atq3">ATQ +3</option>
+              <option value="atemporal-e2-atq4">ATQ +4</option>
+              <option value="atemporal-e2-atq5">ATQ +5</option>
+              <option value="atemporal-e2-atq6">ATQ +6</option>
+              <option value="atemporal-e2-atq7">ATQ +7</option>
+              <option value="atemporal-e2-atq8">ATQ +8</option>
+              <option value="atemporal-e2-atq9">ATQ +9</option>
+              <option value="atemporal-e2-atq10">ATQ +10</option>
+              <option value="atemporal-e2-atq11">ATQ +11</option>
+              <option value="atemporal-e2-atq12">ATQ +12</option>
+              <option value="atemporal-e2-atq13">ATQ +13</option>
+              <option value="atemporal-e2-atq14">ATQ +14</option>
+              <option value="atemporal-e2-atq15">ATQ +15</option>
+              <option value="atemporal-e2-atq16">ATQ +16</option>
+              <option value="atemporal-e2-atq17">ATQ +17</option>
+              <option value="atemporal-e2-atq18">ATQ +18</option>
+              <option value="atemporal-e2-atq19">ATQ +19</option>
+              <option value="atemporal-e2-atq20">ATQ +20</option>
+              <option value="atemporal-e2-arm1">ATQ da arma +1%</option>
+              <option value="atemporal-e2-arm2">ATQ da arma +2%</option>
+              <option value="atemporal-e2-arm3">ATQ da arma +3%</option>
+              <option value="atemporal-e2-cri1">CRIT +1</option>
+              <option value="atemporal-e2-cri2">CRIT +2</option>
+              <option value="atemporal-e2-cri3">CRIT +3</option>
+              <option value="atemporal-e2-cri4">CRIT +4</option>
+              <option value="atemporal-e2-cri5">CRIT +5</option>
+              <option value="atemporal-e2-asp1">ASPD +1%</option>
+              <option value="atemporal-e2-asp2">ASPD +2%</option>
+              <option value="atemporal-e2-asp3">ASPD +3%</option>
+              <option value="atemporal-e2-asp4">ASPD +4%</option>
+              <option value="atemporal-e2-asp5">ASPD +5%</option>
+              <option value="atemporal-e2-dcr1">Dano crítico +1%</option>
+              <option value="atemporal-e2-dcr2">Dano crítico +2%</option>
+              <option value="atemporal-e2-dcr3">Dano crítico +3%</option>
+              <option value="atemporal-e2-dcr4">Dano crítico +4%</option>
+              <option value="atemporal-e2-dcr5">Dano crítico +5%</option>
+              <option value="atemporal-e2-dis1">Dano a distância +1%</option>
+              <option value="atemporal-e2-dis2">Dano a distância +2%</option>
+              <option value="atemporal-e2-dis3">Dano a distância +3%</option>
+              <option value="atemporal-e2-dis4">Dano a distância +4%</option>
+              <option value="atemporal-e2-dis5">Dano a distância +5%</option>
+            </select>
+          </td>
+        </tr>
         <tr class="alwaysShow encantamentos encantamentosColeteEXC">
           <td colspan="4" align="center">
             <select autocomplete="off" id="colexc-e1" style="width:100%;margin-right:1%">
@@ -1827,6 +1921,87 @@
               <option value="4594">Carta Petal</option>
               <option value="4682">Carta Renegada Gertie</option>
               <option value="4588">Carta Wakwak</option>
+            </select>
+          </td>
+        </tr>
+        <tr class="alwaysShow encantamentos encantamentosMtemporal">
+          <td colspan="12" align="center">
+            <select autocomplete="off" id="mtemporal-e1" style="width:100%;margin-right:1%">
+              <option value="">Nenhum</option>
+              <option value="mtemporal-e1-atq5">ATQ +5</option>
+              <option value="mtemporal-e1-atq6">ATQ +6</option>
+              <option value="mtemporal-e1-atq7">ATQ +7</option>
+              <option value="mtemporal-e1-atq8">ATQ +8</option>
+              <option value="mtemporal-e1-atq9">ATQ +9</option>
+              <option value="mtemporal-e1-atq10">ATQ +10</option>
+              <option value="mtemporal-e1-atq11">ATQ +11</option>
+              <option value="mtemporal-e1-atq12">ATQ +12</option>
+              <option value="mtemporal-e1-atq13">ATQ +13</option>
+              <option value="mtemporal-e1-atq14">ATQ +14</option>
+              <option value="mtemporal-e1-atq15">ATQ +15</option>
+              <option value="mtemporal-e1-atq16">ATQ +16</option>
+              <option value="mtemporal-e1-atq17">ATQ +17</option>
+              <option value="mtemporal-e1-atq18">ATQ +18</option>
+              <option value="mtemporal-e1-atq19">ATQ +19</option>
+              <option value="mtemporal-e1-atq20">ATQ +20</option>
+              <option value="mtemporal-e1-atq21">ATQ +21</option>
+              <option value="mtemporal-e1-atq22">ATQ +22</option>
+              <option value="mtemporal-e1-atq23">ATQ +23</option>
+              <option value="mtemporal-e1-atq24">ATQ +24</option>
+              <option value="mtemporal-e1-atq25">ATQ +25</option>
+              <option value="mtemporal-e1-atq26">ATQ +26</option>
+              <option value="mtemporal-e1-atq27">ATQ +27</option>
+              <option value="mtemporal-e1-atq28">ATQ +28</option>
+              <option value="mtemporal-e1-atq29">ATQ +29</option>
+              <option value="mtemporal-e1-atq30">ATQ +30</option>
+              <option value="mtemporal-e1-atq31">ATQ +31</option>
+              <option value="mtemporal-e1-atq32">ATQ +32</option>
+              <option value="mtemporal-e1-atq33">ATQ +33</option>
+              <option value="mtemporal-e1-atq34">ATQ +34</option>
+              <option value="mtemporal-e1-atq35">ATQ +35</option>
+              <option value="mtemporal-e1-atq36">ATQ +36</option>
+              <option value="mtemporal-e1-atq37">ATQ +37</option>
+              <option value="mtemporal-e1-atq38">ATQ +38</option>
+              <option value="mtemporal-e1-atq39">ATQ +39</option>
+              <option value="mtemporal-e1-atq40">ATQ +40</option>
+              <option value="mtemporal-e1-arm1">ATQ da arma +1%</option>
+              <option value="mtemporal-e1-arm2">ATQ da arma +2%</option>
+              <option value="mtemporal-e1-arm3">ATQ da arma +3%</option>
+              <option value="mtemporal-e1-arm4">ATQ da arma +4%</option>
+              <option value="mtemporal-e1-arm5">ATQ da arma +5%</option>
+              <option value="mtemporal-e1-arm6">ATQ da arma +6%</option>
+              <option value="mtemporal-e1-cri3">CRIT +3</option>
+              <option value="mtemporal-e1-cri4">CRIT +4</option>
+              <option value="mtemporal-e1-cri5">CRIT +5</option>
+              <option value="mtemporal-e1-cri6">CRIT +6</option>
+              <option value="mtemporal-e1-cri7">CRIT +7</option>
+              <option value="mtemporal-e1-cri8">CRIT +8</option>
+              <option value="mtemporal-e1-cri9">CRIT +9</option>
+              <option value="mtemporal-e1-cri10">CRIT +10</option>
+              <option value="mtemporal-e1-asp3">ASPD +3%</option>
+              <option value="mtemporal-e1-asp4">ASPD +4%</option>
+              <option value="mtemporal-e1-asp5">ASPD +5%</option>
+              <option value="mtemporal-e1-asp6">ASPD +6%</option>
+              <option value="mtemporal-e1-asp7">ASPD +7%</option>
+              <option value="mtemporal-e1-asp8">ASPD +8%</option>
+              <option value="mtemporal-e1-asp9">ASPD +9%</option>
+              <option value="mtemporal-e1-asp10">ASPD +10%</option>
+              <option value="mtemporal-e1-dcr3">Dano crítico +3%</option>
+              <option value="mtemporal-e1-dcr4">Dano crítico +4%</option>
+              <option value="mtemporal-e1-dcr5">Dano crítico +5%</option>
+              <option value="mtemporal-e1-dcr6">Dano crítico +6%</option>
+              <option value="mtemporal-e1-dcr7">Dano crítico +7%</option>
+              <option value="mtemporal-e1-dcr8">Dano crítico +8%</option>
+              <option value="mtemporal-e1-dcr9">Dano crítico +9%</option>
+              <option value="mtemporal-e1-dcr10">Dano crítico +10%</option>
+              <option value="mtemporal-e1-dis3">Dano a distância +3%</option>
+              <option value="mtemporal-e1-dis4">Dano a distância +4%</option>
+              <option value="mtemporal-e1-dis5">Dano a distância +5%</option>
+              <option value="mtemporal-e1-dis6">Dano a distância +6%</option>
+              <option value="mtemporal-e1-dis7">Dano a distância +7%</option>
+              <option value="mtemporal-e1-dis8">Dano a distância +8%</option>
+              <option value="mtemporal-e1-dis9">Dano a distância +9%</option>
+              <option value="mtemporal-e1-dis10">Dano a distância +10%</option>
             </select>
           </td>
         </tr>
