Adicionada a Coleira de Espinhos

--- a/public/index.html
+++ b/public/index.html
@@ -518,7 +518,7 @@
               <option value="5918b">Marcas de Comodo [0]</option>
               <option value="19456a">Máscara do Tengu Corvo [1]</option>
               <option value="19456b">Máscara do Tengu Corvo [0]</option>
-              <option value="5325">Óculos Biônicos</option>
+              <option value="5325">Olhos Biônicos</option>
               <option value="2202">Óculos Escuros [1]</option>
               <option value="19452">Ornamento Divino [1]</option>
               <option value="19451">Ornamento Divino [0]</option>
@@ -653,6 +653,7 @@
               <option value="420017">Broto dos Anciões FOR</option>
               <option value="420020">Broto dos Anciões SOR</option>
               <option value="19306">Carta de Comodo</option>
+              <option value="420006">Coleira de Espinhos</option>
               <option value="19101">Familiar de Combate</option>
               <option value="19268">Hálito de Verme com Rosto</option>
               <option value="19305a">Lampião das Fadas (Faro Aguçado 1/2)</option>
@@ -2404,7 +2405,7 @@
               <option value="28411">Brincos de Esmeralda [1]</option>
               <option value="490031">Cauda de Petal [1]</option>
               <option value="28501">Chifres de Kirin [1]</option>
-              <option value="2650">Cinto de Morrigante</option>
+              <option value="2650">Cinto de Morrigane</option>
               <option value="28433">Cristal da Luz Azul [1]</option>
               <option value="28492a">Diário do Renegado [1]</option>
               <option value="28492b">Diário do Renegado [1] - Força Violentíssima</option>
