Adicionado a Herança Real

--- a/public/index.html
+++ b/public/index.html
@@ -513,6 +513,8 @@
               <option value="19495">Asinhas Discretas [1]</option>
               <option value="18823">Diadema do Grifo</option>
               <option value="19138">Diadema do Serafim</option>
+              <option value="410025">Herança Real</option>
+              <option value="410026">Herança Real [1]</option>
               <option value="18912">Item qualquer com slot</option>
               <option value="5918a">Marcas de Comodo [1]</option>
               <option value="5918b">Marcas de Comodo [0]</option>
@@ -1131,7 +1133,7 @@
               <option value="4172">Carta Papel</option>
               <option value="4578">Carta Pyuriel Furiosa</option>
               <option value="4521">Carta Sedora</option>
-              <option value="4255">Carta Senhora dos Orcs</option>
+              <option value="4255">Carta Senhora Orc</option>
               <option value="4634">Carta Soldado Imortal</option>
               <option value="4407">Carta Valkyrie Randgris</option>
               <option value="4317">Carta Yakuza</option>
