Adição de 4 novos itens

--- a/public/index.html
+++ b/public/index.html
@@ -1903,6 +1903,8 @@
               <option value="20939">Manto do Senhor do Tempo [1]</option>
               <option value="20749">Manto dos Esquecidos [1]</option>
               <option value="20748">Manto dos Esquecidos [0]</option>
+              <option value="480084">Manto De Fafnir [1]</option>
+              <option value="480094">Manto de Javali [1]</option>
               <option value="20941">Manto Fênix [1]</option>
               <option value="20922">Manto Leviatã [1]</option>
               <option value="20964">Manto Temporal AGI [1]</option>
@@ -2397,6 +2399,8 @@
               <option value="">Nenhum</option>
               <option value="2913">Algemas de Presidiário [1]</option>
               <option value="32205">Anel de Esmeralda [1]</option>
+              <option value="32258">Anel de Júpiter [1]</option>
+              <option value="490068">Anel de Vênus [1]</option>
               <option value="28505">Anel do Capiroto [1]</option>
               <option value="32243">Anel do Desbravador [1]</option>
               <option value="32221">Anel do Senhor do Tempo [1]</option>
@@ -2581,6 +2585,7 @@
               <option value="">Nenhum</option>
               <option value="2913">Algemas de Presidiário [1]</option>
               <option value="32205">Anel de Esmeralda [1]</option>
+              <option value="490068">Anel de Vênus [1]</option>
               <option value="28505">Anel do Capiroto [1]</option>
               <option value="32243">Anel do Desbravador [1]</option>
               <option value="32221">Anel do Senhor do Tempo [1]</option>
