--- a/public/index.html
+++ b/public/index.html
@@ -822,6 +822,7 @@
               <option value="4426">Carta Byorgue</option>
               <option value="4324">Carta Hatii</option>
               <option value="4419">Carta Ktullanux</option>
+              <option value="27326">Carta Necromante de Morroc</option>
               <option value="4408">Carta Pesar Noturno</option>
               <option value="4337">Carta Porcellio</option>
               <option value="4135">Carta Senhor dos Orcs</option>
@@ -2250,6 +2251,7 @@
               <option value="2408">Grilhões</option>
               <option value="22103">Perna E.X.C</option>
               <option value="22071">Salto Alto Elegante [1]</option>
+              <option value="470075">Sandálias Antigas [1]</option>
               <option value="470056">Sapatos do Perseguidor</option>
               <option value="22195">Sapatos Inteligentes [1]</option>
               <option value="22082">Sapatos Luxuosos [1]</option>
@@ -2260,8 +2262,13 @@
             <select disabled autocomplete="off" id="cartaSapatos" style="width:100%;margin-right:1%">
               <option value="">Nenhum</option>
               <option value="4236">Carta Amon-Ra</option>
+              <option value="27260">Carta Ahdara</option>
+              <option value="27251">Carta Bandido de Geffen</option>
               <option value="31017">Carta Cookie Aterrorizante</option>
               <option value="27164">Carta Rainha Verme</option>
+              <option value="27258">Carta Sargas</option>
+              <option value="27252">Carta Valentão de Geffen</option>
+              <option value="27257">Carta Wei</option>
               <option value="4914">Essência de Morroc AGI1</option>
               <option value="4915">Essência de Morroc AGI2</option>
               <option value="4916">Essência de Morroc AGI3</option>
